--- a/static/authentication-old.css
+++ b/static/authentication-old.css
@@ -1,104 +1,139 @@
 body {
+    --color-primary: #009579;
+    --color-primary-dark: #007f67;
+    --color-secondary: #252c6a;
+    --color-error: #cc3333;
+    --color-success: #4bb544;
+    --border-radius: 10px;
+
     margin: 0;
     height: 100vh;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     font-size: 18px;
-    background-size: cover;
-    background-image: " ";
+    font-family: 'Poppins', sans-serif;
+    /* background-size: cover; */
 }
-body::before{ 
-    content: ""; background-image: url('images/new-banner-logo.png'); background-size: 100% 100%; position: absolute;
+
+body::before{
+    content: "";
+    background-image: url('images/new-banner-logo.png');
+    background-size: 100% 100%;
+    position: absolute;
     inset: 0;
     filter: blur(5px);
     -webkit-filter: blur(5px);
     z-index: -100;
-}
+  }
+
 .container {
     width: 400px;
     max-width: 400px;
     margin: 1rem;
     padding: 2rem;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0 40px rgba(255, 165, 0, 0.2);
+    border: 1px solid orange;
     border-radius: var(--border-radius);
-    background: #fff;
+    background: #ffffff;
 }
-.container, .form_input, .form_button {
+
+.container,
+.form__input,
+.form__button {
     font: 500 1rem 'Quicksand', sans-serif;
 }
+
 .form--hidden {
     display: none;
 }
+
 .form > *:first-child {
     margin-top: 0;
 }
+
 .form > *:last-child {
     margin-bottom: 0;
 }
-.brand-logo {
+
+.brand-logo{
     width: 390px;
     height: 70px;
 }
+
 .form__title {
     margin-bottom: 2rem;
     text-align: center;
 }
+
 .form__message {
     text-align: center;
     margin-bottom: 1rem;
 }
+
 .form__message--success {
     color: var(--color-success);
 }
+
 .form__message--error {
     color: var(--color-error);
 }
+
 .form__input-group {
     margin-bottom: 1rem;
 }
+
 .form__input {
     display: block;
     width: 100%;
     padding: 0.75rem;
     box-sizing: border-box;
     border-radius: var(--border-radius);
-    border: 1px solid #ddd;
+    border: 1px solid #dddddd;
     outline: none;
-    background: #eee;
+    background: #eeeeee;
     transition: background 0.2s, border-color 0.2s;
 }
+
 .form__input:focus {
-    border-color: var(--color-primary);
-    background: #fff;
+    border-color: #5ac4fe;
+    background: #ffffff;
 }
+
 .form__input--error {
     color: var(--color-error);
     border-color: var(--color-error);
 }
+
 .form__input-error-message {
     margin-top: 0.5rem;
     font-size: 0.85rem;
     color: var(--color-error);
 }
+
 .form__button {
     width: 100%;
     padding: 1rem 2rem;
     font-weight: bold;
     font-size: 1.1rem;
-    color: #fff;
+    color: #ffffff;
     border: none;
     border-radius: var(--border-radius);
     outline: none;
     cursor: pointer;
     background: #5ac4fe;
+    /* background-image: linear-gradient(45deg, rgb(209, 209, 209), #5ac4fe) */
 }
+
 .form__button:active {
     transform: scale(0.98);
 }
+
 .form__text {
     text-align: center;
 }
+
 .form__link {
     color: var(--color-secondary);
     text-decoration: none;
