--- a/static/error.css
+++ b/static/error.css
@@ -1,6 +1,7 @@
 .notification{
     position: absolute;
     top: 0;
+    z-index: 10;
     display: flex;
     align-items: center;
     justify-content: center;
