--- a/static/settings.css
+++ b/static/settings.css
@@ -3,11 +3,28 @@ body {
   font-family: poppins, sans-serif;
 }
 
+body::before{
+  content: "";
+  background: url(images/new-banner-logo.png);
+  background-size: 100% 100%;
+  filter: blur(5px);
+  position: absolute;
+  inset: 0;
+  z-index: -100;
+}
+
 .wrapper {
+  background: rgba( 255, 255, 255, 0.25 );
+  box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+  backdrop-filter: blur( 6.5px );
+  -webkit-backdrop-filter: blur( 6.5px );
+  border-radius: 10px;
+  border: 1px solid rgba( 255, 255, 255, 0.18 );
+
   display: flex;
   width: 850px;
   height: 600px;
-  margin: 40px auto 0 auto;
+  margin: 40px auto 20px auto;
   box-shadow: 0px 6px 16px rgba(98, 100, 108, 0.5);
   border-radius: 50px;
 }
@@ -94,7 +111,7 @@ input {
   padding-top: 16px;
   margin-left: 0px;
   width: 100%;
-  background-color: #fff;
+  background-color: transparent;
   border: none;
   outline: none;
   border-bottom: 2px solid #eaeaea;
