--- a/static/css/homepage-spinner.css
+++ b/static/css/homepage-spinner.css
@@ -6,7 +6,7 @@
     align-items: center;
     z-index: 200;
     background: transparent;
-    background-color: rgba(95, 95, 95, 0.5)
+    background-color: #827ffe;
 }
 
 .circle{
