--- a/static/css/product-view.css
+++ b/static/css/product-view.css
@@ -567,11 +567,13 @@ section{
     display: flex;
     justify-content: space-between;
 }
-.desc-content .desc-nav span{
-    font-weight: 600;
-    font-size: 12px;
-    line-height: 23px;
-    cursor: pointer;
+.desc-content .desc-nav span a{
+  text-decoration: none;
+  color: black;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 23px;
+  cursor: pointer;
 }
 .desc-content .desc-nav span:hover{
     border-bottom: 1px solid red;
